--- a/src/layout/_layout.scss
+++ b/src/layout/_layout.scss
@@ -1,6 +1,11 @@
+.header, .body {
+	background-color: white !important;
+}
+
 .wrapper {
 	width: 100%;
 	@include ltr-rtl("padding-left", var(--cui-sidebar-occupy-start, 0));
 	will-change: auto;
-	@include transition(padding 0.15s);
+	@include transition(padding 0.10s);
+	background-color: white !important;
 }
