--- a/src/views/flow/dragndrop/DragNDrop.css
+++ b/src/views/flow/dragndrop/DragNDrop.css
@@ -11,7 +11,7 @@
 	background: #fcfcfc;
 }
 
-.dndflow aside>* {	
+.dndflow aside>* {
 	margin-bottom: 10px;
 	cursor: grab;
 }
@@ -34,4 +34,17 @@
 		width: 20%;
 		max-width: 180px;
 	}
+}
+
+/* Button */
+.save__controls {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	z-index: 4;
+	font-size: 12px;
+}
+
+.save__controls button {
+	margin-left: 5px;
 }
